--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,13 @@
 <maven.compiler.target>11</maven.compiler.target>
 </properties>
 
+<dependencies>
+<!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+  <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>8.0.33</version>
+	</dependency>
+</dependencies>
+
 </project>
